--- a/eas.json
+++ b/eas.json
@@ -1,53 +1,20 @@
-{
-  "build": {
-    "base": {
-      "node": "12.13.0",
-      "yarn": "1.22.5",
-      "env": {
-        "EXAMPLE_ENV": "example value"
-      },
-      "android": {
-        "image": "default",
-        "env": {
-          "PLATFORM": "android"
-        }
-      },
-      "ios": {
-        "image": "latest",
-        "env": {
-          "PLATFORM": "ios"
-        }
-      }
+    "cli": {
+        "version": ">= 5.6.0"
     },
-    "development": {
-      "extends": "base",
-      "developmentClient": true,
-      "env": {
-        "ENVIRONMENT": "development"
-      },
-      "android": {
-        "distribution": "internal",
-        "withoutCredentials": true
-      },
-      "ios": {
-        "simulator": true
-      }
-    },
-    "staging": {
-      "extends": "base",
-      "env": {
-        "ENVIRONMENT": "staging"
-      },
-      "distribution": "internal",
-      "android": {
-        "buildType": "apk"
-      }
-    },
-    "production": {
-      "extends": "base",
-      "env": {
-        "ENVIRONMENT": "production"
-      }
+    "build": {
+        "development": {
+            "distribution": "internal",
+            "developmentClient":true,
+            "android": {
+                "gradleCommand": ":app:assembleDebug"
+            },
+            "ios": {
+                "buildConfiguration": "Debug"
+            }
+        },
+        "preview": {
+            
+        },
+        "production": {}
     }
-  }
 }
