--- a/eas.json
+++ b/eas.json
@@ -1,8 +1,6 @@
-    "cli": {
-        "version": ">= 5.6.0"
-    },
-    "build": {
-        "development": {
+{
+  "build": {
+    "development": {
             "distribution": "internal",
             "developmentClient":true,
             "android": {
@@ -12,9 +10,9 @@
                 "buildConfiguration": "Debug"
             }
         },
-        "preview": {
-            
-        },
-        "production": {}
-    }
+    "preview": {
+      "distribution": "internal"
+    },
+    "production": {}
+  }
 }
