--- a/eas.json
+++ b/eas.json
@@ -1,5 +1,24 @@
 {
   "build": {
+    "base": {
+      "node": "12.13.0",
+      "yarn": "1.22.5",
+      "env": {
+        "EXAMPLE_ENV": "example value"
+      },
+      "android": {
+        "image": "default",
+        "env": {
+          "PLATFORM": "android"
+        }
+      },
+      "ios": {
+        "image": "latest",
+        "env": {
+          "PLATFORM": "ios"
+        }
+      }
+    },
     "development": {
             "distribution": "internal",
             "developmentClient":true,
@@ -9,10 +28,22 @@
             "ios": {
                 "buildConfiguration": "Debug"
             }
-        },
-    "preview": {
-      "distribution": "internal"
     },
-    "production": {}
+    "staging": {
+      "extends": "base",
+      "env": {
+        "ENVIRONMENT": "staging"
+      },
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
+    },
+    "production": {
+      "extends": "base",
+      "env": {
+        "ENVIRONMENT": "production"
+      }
+    }
   }
 }
