--- a/eas.json
+++ b/eas.json
@@ -1,49 +1,57 @@
 {
+  "cli": {
+    "version": ">= 0.60.0"
+  },
   "build": {
-    "base": {
-      "node": "12.13.0",
-      "yarn": "1.22.5",
-      "env": {
-        "EXAMPLE_ENV": "example value"
-      },
-      "android": {
-        "image": "default",
-        "env": {
-          "PLATFORM": "android"
-        }
-      },
-      "ios": {
-        "image": "latest",
-        "env": {
-          "PLATFORM": "ios"
-        }
-      }
-    },
     "development": {
-            "distribution": "internal",
-            "developmentClient":true,
-            "android": {
-                "gradleCommand": ":app:assembleDebug"
-            },
-            "ios": {
-                "buildConfiguration": "Debug"
-            }
-    },
-    "staging": {
-      "extends": "base",
-      "env": {
-        "ENVIRONMENT": "staging"
-      },
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
-      }
+        "gradleCommand": ":app:assembleDebug"
+      },
+      "ios": {
+        "buildConfiguration": "Debug"
+      },
+      "channel": "development"
+    },
+    "preview": {
+      "distribution": "internal",
+      "channel": "preview"
     },
     "production": {
-      "extends": "base",
+      "channel": "production"
+    },
+    "test": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease :app:assembleAndroidTest -DtestBuildType=release",
+        "withoutCredentials": true
+      },
+      "ios": {
+        "simulator": true
+      },
+      "buildArtifactPaths": [
+        "artifacts/**/*.png"
+      ],
+      "channel": "test"
+    },
+    "test_debug": {
+      "android": {
+        "gradleCommand": ":app:assembleDebug :app:assembleAndroidTest -DtestBuildType=debug",
+        "withoutCredentials": true
+      },
+      "ios": {
+        "buildConfiguration": "Debug",
+        "simulator": true
+      },
       "env": {
-        "ENVIRONMENT": "production"
-      }
+        "EXPO_USE_UPDATES": "1"
+      },
+      "buildArtifactPaths": [
+        "artifacts/**/*.png"
+      ],
+      "channel": "test_debug"
     }
+  },
+  "submit": {
+    "production": {}
   }
 }
