--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "baf93eaa-c839-498a-9ce2-6e7377461f2b" 
+        "projectId": "tarot" 
       }
     }
   }
